2016-02-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Hg.rst: Document the ssh public keys for the server hosting
	the development Mercurial repository.

2016-02-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): Fix SourceForge bug #333
	heap-buffer-overflow in coders/xpm.c:409.

2015-12-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* ttf: Update bundled freetype to release 2.6.2.

	* libxml: Update bundled libxml2 to release 2.9.3.

2015-11-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* webp: Updated bundled libwebp to release 0.4.4.

	* png: Updated bundled libpng to release 1.6.19.

2015-11-05  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (WriteOnePNGImage): Added "volatile" to
	several declarations to stop "might be clobbered" warnings.

2015-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update NEWS for 1.3.23 release.

2015-11-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (IdentifyImageCommand): Fix problem that
	identify with -format "%A" does not always report correct answer
	due to insufficient analysis of image.  Fixes SourceForge bug #326
	"gm identify: transparency detection bug ".

2015-11-05  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (WriteOnePNGImage): Restored a "volatile"
	declaration that was accidentally deleted on 2015-11-03.

2015-11-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Add checks for 'ps2write' and 'eps2write' as
	Ghostscript Postscript and Encapsulated Postscript
	writers. Resolves issue reported to graphicsmagick-bugs mailing
	list on 2015-11-01 entitled "Failure to detect pswrite and
	epswrite Ghostscript devices".

2015-11-03  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadRawProfile): Issue a warning instead of
	an error when attempting to read a zero-length profile.
