@@ -38,6 +38,10 @@
 <p>2016-02-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>Magick++/lib/Image.cpp (xResolution): New method to support
+setting the horizontal resolution with double precision.
+(yResolution): New method to support setting the vertical
+resolution with double precision.</li>
 <li>www/Hg.rst: Document the ssh public keys for the server hosting
 the development Mercurial repository.</li>
 </ul>
